﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-16 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_create.php: undefined $field_collation under MySQL < 4.1.x

2005-10-14 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/mysqli.dbi.lib.php: problem under MySQL 4.0.x
    * libraries/sql_query_form.lib.php: support MySQL < 4.1.x

2005-10-14 Michal Čihař  <michal@cihar.com>
    * libraries/sql_query_form.lib.php: Do not attempt to read upload dir when
      not configured.
    * libraries/sqlparser.lib.php: Do not walk chars for hex and numbers one
      by one, this boosts performance while inserting huge blobs (bug
      #1315232).
    * libraries/sqlparser.lib.php: Handle correctly float like .01 (bug
      #1252713).

2005-10-14 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * lang/*: typo 'unser' -> 'user'
    * lang/german: partial Update
    * libraries/import.lib.php: uninitialized variables
    
2005-10-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_addfield.php: undefined $field_collation under MySQL < 4.1.x

2005-10-13 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Fix URL rewriting not to match empty parts.
    * calendar.php, themes.php, libraries/auth/config.auth.lib.php,
      libraries/auth/cookie.auth.lib.php, libraries/auth/http.auth.lib.php:
      Use common header.
    * libraries/header_meta_style.inc.php: Add support for defining page
      title.
    * libraries/left.js, libraries/header_meta_style.inc.php: Move browser
      detection to only place where it is currently used.
    * header.inc.php, css/phpmyadmin.css.php: Define CSS normal way and not
      by writing through JavaScript.
    * libraries/get_foreign.lib.php: Free temporary query result.
    * lang/czech: Improve some translations.
    * sql.php: We need bookmark code to be included everytime.
    * libraries/common.lib.php: Allow editing of query without database.
